err/products.plonerss.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/Products'...
Listing './lib/python3.5/site-packages/Products/PloneRSS'...
Listing './lib/python3.5/site-packages/Products/PloneRSS/content'...
Compiling './lib/python3.5/site-packages/Products/PloneRSS/content/feedparser.py'...
***   File "./lib/python3.5/site-packages/Products/PloneRSS/content/feedparser.py", line 236
    raise AttributeError, "object has no attribute '%s'" % key
                        ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/Products/PloneRSS/content/newsportlet.py'...
***   File "./lib/python3.5/site-packages/Products/PloneRSS/content/newsportlet.py", line 110
    if len(instances)<>1: return []
                      ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/Products/PloneRSS/content/rssparser.py'...
***   File "./lib/python3.5/site-packages/Products/PloneRSS/content/rssparser.py", line 311
    if value.find('backend.userland.com/rss') <> -1:
                                               ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/Products/PloneRSS/i18n'...
Listing './lib/python3.5/site-packages/Products/PloneRSS/profiles'...
Listing './lib/python3.5/site-packages/Products/PloneRSS/profiles/default'...
Listing './lib/python3.5/site-packages/Products/PloneRSS/profiles/default/types'...
Listing './lib/python3.5/site-packages/Products/PloneRSS/skins'...
Listing './lib/python3.5/site-packages/Products/PloneRSS/skins/plonerss_images'...
Listing './lib/python3.5/site-packages/Products/PloneRSS/skins/plonerss_styles'...
Listing './lib/python3.5/site-packages/Products/PloneRSS/skins/plonerss_templates'...
Compiling './lib/python3.5/site-packages/Products/PloneRSS/skins/plonerss_templates/rss_document_wrap.py'...
***   File "./lib/python3.5/site-packages/Products/PloneRSS/skins/plonerss_templates/rss_document_wrap.py", line 34
    return text
              ^
SyntaxError: 'return' outside function

Compiling './lib/python3.5/site-packages/Products/PloneRSS/skins/plonerss_templates/rss_feedcount.py'...
***   File "./lib/python3.5/site-packages/Products/PloneRSS/skins/plonerss_templates/rss_feedcount.py", line 13
    return len(refs)
                   ^
SyntaxError: 'return' outside function

Compiling './lib/python3.5/site-packages/Products/PloneRSS/skins/plonerss_templates/rss_fetchfeeds.py'...
***   File "./lib/python3.5/site-packages/Products/PloneRSS/skins/plonerss_templates/rss_fetchfeeds.py", line 19
    if review_state <> "published":
                     ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/Products/PloneRSS/skins/plonerss_templates/rss_fetchinstances.py'...
***   File "./lib/python3.5/site-packages/Products/PloneRSS/skins/plonerss_templates/rss_fetchinstances.py", line 29
    return res
    ^
SyntaxError: 'return' outside function

Compiling './lib/python3.5/site-packages/Products/PloneRSS/skins/plonerss_templates/rss_fetchitems.py'...
***   File "./lib/python3.5/site-packages/Products/PloneRSS/skins/plonerss_templates/rss_fetchitems.py", line 21
    return results
                 ^
SyntaxError: 'return' outside function

Compiling './lib/python3.5/site-packages/Products/PloneRSS/skins/plonerss_templates/rss_fetchsearch.py'...
***   File "./lib/python3.5/site-packages/Products/PloneRSS/skins/plonerss_templates/rss_fetchsearch.py", line 38
    print "search?portal_type=rss_item&sort_on=getRssDate&sort_order=reverse"
                                                                            ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/Products/PloneRSS/skins/plonerss_templates/rss_manager_view_overview.py'...
***   File "./lib/python3.5/site-packages/Products/PloneRSS/skins/plonerss_templates/rss_manager_view_overview.py", line 26
    print "<p>"
              ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/Products.PloneRSS-1.0.7b0.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
